Added account discovery through search bar, fixed follow logic
