# contracts/openapi.yaml
@@ -113,6 +113,93 @@ paths:
               schema:
                 $ref: '#/components/schemas/School'
           description: ''
+  /api/users/:
+    get:
+      operationId: users_list
+      tags:
+      - users
+      security:
+      - cookieAuth: []
+      - basicAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/PublicUser'
+          description: ''
+  /api/users/{username}/:
+    get:
+      operationId: users_retrieve
+      parameters:
+      - in: path
+        name: username
+        schema:
+          type: string
+        required: true
+      tags:
+      - users
+      security:
+      - cookieAuth: []
+      - basicAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PublicUser'
+          description: ''
+  /api/users/{username}/follow/:
+    post:
+      operationId: users_follow_create
+      parameters:
+      - in: path
+        name: username
+        schema:
+          type: string
+        required: true
+      tags:
+      - users
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PublicUser'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/PublicUser'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/PublicUser'
+        required: true
+      security:
+      - cookieAuth: []
+      - basicAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PublicUser'
+          description: ''
+    delete:
+      operationId: users_follow_destroy
+      parameters:
+      - in: path
+        name: username
+        schema:
+          type: string
+        required: true
+      tags:
+      - users
+      security:
+      - cookieAuth: []
+      - basicAuth: []
+      responses:
+        '204':
+          description: No response body
 components:
   schemas:
     CurrentUser:
@@ -144,9 +231,17 @@ components:
         profile_description:
           type: string
           maxLength: 300
+        follower_count:
+          type: integer
+          readOnly: true
+        following_count:
+          type: integer
+          readOnly: true
       required:
       - email
       - first_name
+      - follower_count
+      - following_count
       - id
       - last_name
       - school
@@ -192,6 +287,56 @@ components:
         profile_description:
           type: string
           maxLength: 300
+        follower_count:
+          type: integer
+          readOnly: true
+        following_count:
+          type: integer
+          readOnly: true
+    PublicUser:
+      type: object
+      properties:
+        id:
+          type: integer
+          readOnly: true
+        username:
+          type: string
+          pattern: ^[A-Za-z0-9._]+$
+          maxLength: 30
+          minLength: 3
+        first_name:
+          type: string
+          maxLength: 150
+        school:
+          allOf:
+          - $ref: '#/components/schemas/School'
+          readOnly: true
+        instagram_handle:
+          type: string
+          maxLength: 30
+        profile_description:
+          type: string
+          maxLength: 300
+        follower_count:
+          type: integer
+          readOnly: true
+        following_count:
+          type: integer
+          readOnly: true
+        is_following:
+          type: boolean
+          readOnly: true
+        is_self:
+          type: boolean
+          readOnly: true
+      required:
+      - follower_count
+      - following_count
+      - id
+      - is_following
+      - is_self
+      - school
+      - username
     School:
       type: object
       properties:
